--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@ nav {
     text-align: center;
 }
 nav a {
-    margin: 0 1em;
+    margin: 0.5em;
     text-decoration: none;
     color: #4B0082;
     font-weight: bold;
+    display: inline-block;
 }
 .container {
     max-width: 800px;
@@ -39,4 +40,32 @@ footer {
     margin: 2em 0;
     font-size: 0.9em;
     color: #666;
+}
+
+/* Mobile styles */
+.menu-toggle {
+    display: none;
+    background-color: #4B0082;
+    color: white;
+    padding: 0.5em 1em;
+    font-size: 1em;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    nav {
+        display: none;
+        flex-direction: column;
+        text-align: left;
+        background-color: #eee;
+    }
+    nav a {
+        display: block;
+        padding: 0.5em 1em;
+    }
+    .menu-toggle {
+        display: block;
+    }
 }
