--- a/style.css
+++ b/style.css
@@ -13,16 +13,17 @@ header {
     text-align: center;
 }
 nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     background: #eee;
     padding: 0.8em;
-    text-align: center;
 }
 nav a {
     margin: 0.5em;
     text-decoration: none;
     color: #4B0082;
     font-weight: bold;
-    display: inline-block;
 }
 .container {
     max-width: 800px;
@@ -41,8 +42,6 @@ footer {
     font-size: 0.9em;
     color: #666;
 }
-
-/* Mobile styles */
 .menu-toggle {
     display: none;
     background-color: #4B0082;
@@ -54,6 +53,31 @@ footer {
     width: 100%;
 }
 
+/* Dropdown menu */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    color: #4B0082;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Responsive behavior */
 @media (max-width: 768px) {
     nav {
         display: none;
@@ -61,7 +85,7 @@ footer {
         text-align: left;
         background-color: #eee;
     }
-    nav a {
+    nav a, .dropdown {
         display: block;
         padding: 0.5em 1em;
     }
