--- a/style.css
+++ b/style.css
@@ -140,3 +140,16 @@ footer {
 .contact-form a:hover {
   text-decoration: underline;
 }
+.testimonial {
+  background-color: #f1f1f1;
+  border-left: 4px solid #4B0082;
+  padding: 1.5em;
+  margin: 2em 0;
+  font-style: italic;
+}
+
+.testimonial footer {
+  margin-top: 1em;
+  font-weight: bold;
+  color: #555;
+}
