--- a/style.css
+++ b/style.css
@@ -141,15 +141,15 @@ footer {
   text-decoration: underline;
 }
 .testimonial {
-  background-color: #f1f1f1;
-  border-left: 4px solid #4B0082;
+  background-color: #f5f5f5;
+  border-left: 4px solid #6a1b9a;
   padding: 1.5em;
   margin: 2em 0;
   font-style: italic;
 }
 
 .testimonial footer {
-  margin-top: 1em;
+  margin-top: 1.5em;
   font-weight: bold;
-  color: #555;
+  color: #666;
 }
